Updated CSS to fix overflow issue on mobile

--- a/style.css
+++ b/style.css
@@ -656,6 +656,106 @@ footer {
     display: block;
     position: relative;
 }
+
+.footer-button {
+    margin-top: 50px;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+
+.footer-input {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    overflow: visible;
+    box-sizing: border-box;
+}
+
+.footer-input input {
+    color: hsl(229, 31%, 21%);
+    background: #fff;
+    border-radius: 4px;
+    width: 100%;
+    height: 50px;
+    padding:  0 45px 0 20px; 
+    -webkit-text-fill-color: hsl(229, 31%, 21%);
+    box-sizing: border-box;
+}
+
+.footer-btn {
+    background: hsl(0, 94%, 66%);
+    border: none;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: hsl(0, 0%, 97%);
+    font-weight: 500;
+    width: 100%;
+    max-width: 400px;
+}
+
+.footer-input input::placeholder {
+    color: hsl(229, 31%, 21%);
+    opacity: 1;
+}
+
+.error-icon {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    background-image: url('images/icon-error.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: none;
+    pointer-events: none;
+    
+}
+
+.error-message {
+    display: none;
+    background-color: hsl(0, 94%, 66%);
+    color: #fff;
+    font-size: 14px;
+    padding: 5px 10px;
+    text-align: left;
+    margin-top: -2px;
+    border-radius: 4px;
+    width: 100%;
+    position: absolute;
+}
+
+.footer-btn:active {
+    background: white;
+    border: 2px solid hsl(0, 94%, 66%);
+    color: hsl(0, 94%, 66%);
+    font-weight: 700;
+}
+
+.footer-input.error .error-icon {
+    display: block;
+}
+
+.footer-input.error .error-message {
+    display: block;
+    position: absolute;
+  bottom: -30px; /* puts error message below input without pushing it */
+  left: 0;
+  width: 100%;
+}
+
+.footer-input.error {
+    margin-bottom: 30px; 
+    position: relative; 
+    z-index: 1;
+}
     
 
 }
